--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html{
+    overflow-x: hidden;
+    scroll-behavior: smooth !important;
+}
+
+/* Fonts */
+* {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
+/* Custom Scrollbar */
+body::-webkit-scrollbar{
+    width: 5px;
+}
+
+body::-webkit-scrollbar-track{
+    background: #000;
+}
+
+body::-webkit-scrollbar-thumb{
+    background: rgb(243, 243, 243);
+    border-radius: 10px;
+}
+
+
+
+.custom-shadow-inset-black{
+    box-shadow: inset 0px 0px 100px 1px black;
+ 
+
+}
