--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body, html{
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    box-shadow: none !important;
   }
   
 
